# pomo-rusTui

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: analytics.rs  app.rs  main.rs  timer.rs  ui.rs
